# FairTalkAI

./: README.md  docker-compose.yaml
backend/: .env  pyproject.toml
backend/src/auth/: route.py  services.py
backend/src/backend/: admin.py  api.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/src/chat/: accuracy.py  routers.py  utils.py
backend/src/chatapp/: models.py  serializers.py  urls.py  utils.py  views.py
backend/src/chatapp/migrations/: 0001_initial.py
backend/src/chatbot/: api.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/src/chatbot/migrations/: 0001_initial.py  0002_bias_message_bias.py
backend/src/core/: security.py
backend/src/fastapi/: main.py  seed.py
backend/src/fastapi/chat/: models.py  routers.py  schema.py  utils.py
backend/src/fastapi/core/: config.py  database.py
backend/src/fastapi/users/: models.py  routers.py  schema.py
frontend/: .env  .gitignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
frontend/actions/: changePasswordAction.ts  deleteAccountAction.ts  profileAction.ts  registerAction.ts
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/home/: page.tsx
frontend/components/: HomePage.tsx  UserSession.tsx
frontend/components/Chat/: Chat.tsx  ChatInput.tsx  ChatLoader.tsx  ChatMessage.tsx
frontend/lib/: api.ts  auth.ts
frontend/providers/: ChatProvider.tsx  ReactQueryProvider.tsx
frontend/services/: service.ts
frontend/types/: index.ts
(+29 files in other folders)
